updated semantic html, need to fix article overlap and layout is nearly complete.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,12 +2,20 @@
   display:grid;
   place-items:center;
 }
-section{
+article{
   height:100vh;
   width:100%;
-  border:2px solid;
-  margin-bottom:2px;
-}
-article{
   border:2px dashed;
+}
+.title{
+  height:10vh;
+  width:100%;
+} 
+
+section{
+  border:2px solid;
+  width:auto !important;
+  height:auto!important;
+    padding:10px;
+    margin:10px;
 }
